# progressive-cli

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: arch-package.yml  go.yml  js.yml  stale.yml
cppcli/: .gitignore  CMakeLists.txt  README.md  demo.json
cppcli/cmake/: FindLibOlm.cmake
cppcli/lib/: CMakeLists.cli.bak  CMakeLists.standalone.txt  CMakeLists.txt  libmatrix.cmake  libmatrix.hpp  libmatrix.pc.in
cppcli/lib/api/: CMakeLists.txt  demo_data.cpp  demo_data.hpp  demo_handler.cpp  demo_handler.hpp  format.cpp  format.hpp  handler.cpp  handler.hpp  router.cpp  router.hpp  server.cpp  server.hpp  websocket.cpp  websocket.hpp
cppcli/lib/build_standalone/: CMakeCache.txt  Makefile  cmake_install.cmake  libmatrix.pc
cppcli/lib/database/: CMakeLists.txt  db.cpp  db.hpp
cppcli/lib/deltachat/: CMakeLists.txt  dc_bridge.cpp  dc_bridge.hpp
cppcli/lib/e2ee/: CMakeLists.txt  crypto.cpp  crypto.hpp  megolm.cpp  megolm.hpp  olm.cpp  olm.hpp  session.cpp  session.hpp
cppcli/lib/formats/: CMakeLists.txt  gemini.cpp  gemini.hpp  html.cpp  html.hpp  json.cpp  json.hpp  markdown.cpp  markdown.hpp  text.cpp  text.hpp
cppcli/lib/http/: CMakeLists.txt  http.cpp  http.hpp  proxy.cpp  proxy.hpp
cppcli/lib/irc/: CMakeLists.txt  irc_client.cpp  irc_client.hpp
cppcli/lib/json/: CMakeLists.txt  json.hpp
cppcli/lib/lemmy/: CMakeLists.txt  lemmy_client.cpp  lemmy_client.hpp
cppcli/lib/matrix/: CMakeLists.txt  api.cpp  api.hpp  auth.cpp  auth.hpp  client.cpp  client.hpp  error.cpp  error.hpp  events.cpp  events.hpp  pushrules.cpp  pushrules.hpp  room_sort.cpp  room_sort.hpp  sliding_sync.cpp  sliding_sync.hpp  sync.cpp  sync.hpp
cppcli/lib/tdlib/: CMakeLists.txt  tdlib_bridge.cpp  tdlib_bridge.hpp
cppcli/lib/tui/: CMakeLists.txt  chat_view.cpp  chat_view.hpp  config.cpp  config.hpp  help_screen.cpp  help_screen.hpp  login.cpp  login.hpp  main_view.cpp  main_view.hpp  screen.cpp  screen.hpp
cppcli/lib/util/: CMakeLists.txt  client_utils.cpp  client_utils.hpp  logger.cpp  logger.hpp  notifications.cpp  notifications.hpp  string_utils.cpp  string_utils.hpp
cppcli/src/: CMakeLists.txt  bridge_commands.cpp  commands.cpp  commands.hpp  config.cpp  config.hpp  globals.hpp  main.cpp
cppcli/src/cli/: args.cpp  args.hpp
cppcli/src/server/: server.cpp  server.hpp  web_proxy.cpp  web_proxy.hpp
cppcli/tests/: CMakeLists.txt  test_main.cpp
gomuks/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-eslint.sh  .pre-commit-tsc.sh  CHANGELOG.md  README.md  go.mod  go.sum
gomuks/.github/workflows/: go.yml
gomuks/cmd/gomuks/: main.go
gomuks/desktop/: forge.config.ts  package-lock.json  package.json
gomuks/desktop/src/: main.ts  preload.ts
gomuks/pkg/ffi/: build.sh  ffi.go  gomuksffi.h
gomuks/pkg/ffi/demo/: build.sh  demo.c
gomuks/pkg/gomuks/: api_handler.go  config.go  gomuks.go  logout.go  media.go  media_heic.go  media_libheif.go  push.go  pushmessage.go  server.go  websocket.go
gomuks/pkg/hicli/: commands.go  direct.go  hicli.go  html.go  init.go  json-commands.go  json.go  login.go  login_enhanced.go  misc.go  paginate.go  profile.go  proxy.go  pushrules.go  send.go  sync.go  syncwrap.go  verify.go
gomuks/pkg/hicli/api/: format.go  gemini_renderer.go  html_renderer.go  json_renderer.go  markdown_renderer.go  renderers_test.go  text_renderer.go  types.go
gomuks/pkg/hicli/cmdspec/: commands.go
gomuks/pkg/hicli/database/: account.go  accountdata.go  event.go  invitedroom.go  room.go  sessionrequest.go  space.go  state.go  timeline.go
gomuks/pkg/hicli/database/upgrades/: 00-latest-revision.sql  16-fix-empty-dm-user-id.sql  17-update-direct-chats.go  18-add-sticky-time.sql  19-fix-triggers.sql
gomuks/pkg/hicli/jsoncmd/: commands.go  events.go  interface.go  params.go  responses.go
gomuks/pkg/rpc/: requests.go
gomuks/pkg/rpc/client/: client.go
gomuks/pkg/rpc/store/: preferences.go
gomuks/tui/: tui.go  view-login.go  yggdrasil.go
gomuks/tui/config/: config.go
gomuks/tui/widget/: connection-status.go  proxy-settings.go
gomuks/version/: version.go
gomuks/web/: .gitignore  eslint.config.js  frontend.go  index.html  package-lock.json  package.json  vite.config.ts
gomuks/web/src/: App.tsx  index.css  vite-env.d.ts
gomuks/web/src/api/: beeper.ts  client.ts  media.ts  rpc.ts
gomuks/web/src/api/statestore/: hooks.ts  invitedroom.ts  main.ts  room.ts
gomuks/web/src/api/types/: android.ts  commands.ts  fakecommands.ts  hievents.ts  hitypes.ts  mxtypes.ts  stdcommands.d.ts
gomuks/web/src/api/types/preferences/: preferences.ts  types.ts
gomuks/web/src/api/wasm/: sqlite_bridge.ts  wasmuks.ts
gomuks/web/src/ui/: MainScreen.css  MainScreen.tsx  MainScreenContext.ts  keybindings.ts
gomuks/web/src/ui/composer/: MediaUploadDialog.tsx  MessageComposer.tsx  localcommands.ts
gomuks/web/src/ui/emojipicker/: EmojiPicker.css  GIFPicker.tsx  gifsource.ts
gomuks/web/src/ui/login/: BeeperLogin.tsx  LoginScreen.tsx  VerificationScreen.tsx
gomuks/web/src/ui/menu/: useSecondaryItems.tsx  util.ts
gomuks/web/src/ui/modal/: EventReactions.css  EventReactions.tsx  opener.tsx
gomuks/web/src/ui/rightpanel/: StartDMButton.tsx  UserExtendedProfile.tsx  UserInfo.tsx  UserInfoMutualRooms.tsx  UserModeration.tsx
gomuks/web/src/ui/roomlist/: Entry.tsx
gomuks/web/src/ui/roomview/: ImagePackView.css  ImagePackView.tsx  RoomPreview.tsx  RoomViewHeader.tsx
gomuks/web/src/ui/settings/: RoomStateExplorer.tsx  SettingsView.css  SettingsView.tsx
gomuks/web/src/ui/timeline/: ReplyBody.css  ReplyBody.tsx  timelineutil.tsx
gomuks/web/src/ui/timeline/content/: HiddenEvent.tsx  MediaMessageBody.tsx  MemberBody.tsx  PolicyRuleBody.tsx  PowerLevelBody.tsx  RoomNameBody.tsx  index.css  useMediaContent.tsx
gomuks/web/src/ui/urlpreview/: URLPreview.tsx
gomuks/web/src/ui/util/: JSONView.tsx  jumpToEvent.tsx
gomuks/web/src/ui/widget/: util.ts  widgetDriver.ts
gomuks/web/src/util/: keys.ts  sound.ts  validation.ts
packaging/arch/: .SRCINFO  PKGBUILD  PKGBUILD.ci  PKGBUILD.local
